--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "dubna-parser"
 version = "0.1.0"
-description = ""
+description = "package for parsing schedule of Dubna"
 authors = ["Skelesheit <Skelesheit@gmail.com>"]
 readme = "README.md"
 
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.12"
 openpyxl = "^3.1.5"
 gdown = "^5.2.0"
-pydantic = "^2.11.7"
 
 
 [build-system]
